src/components/Layout/index.scss
.page {
    width: calc(100% - 60px);
    height: 100%;
    position: absolute;
    margin-left: 60px;
    overflow-y: hidden;

    .tags {
        color: #ffd700;
        opacity: 0.6;
        position: absolute;
        bottom: 0;
        left: 4%;
        font-size: 18px;
        font-family: 'La Belle Aurore';
        z-index: -1;
    }

    .top-tags {
        bottom: auto;
        top: 2vw;
    }

    .bottom-tag-html {
        margin-left: -20%;
    }
}

.home-page,
.contact-page,
.about-page,
.projects-page {
    height: 100%;
    display: flex;
    align-items: center;

    animation: fadeIn 1.5s forwards;

    h1 {
        font-size: 53px;
        font-family: 'Coolvetica';
        color: #ffd700;
        font-weight: 400;
        margin-top: 0;
        position: relative;
        margin-bottom: 40px;
        left: 10px;

        &::before {
            content: '<h1>';
            color: #ffd700;

            font-family: 'La Belle Aurore';
            font-size: 18px;
            position: absolute;
            margin-top: -10px;
            left: -15px;
            opacity: 0.6;
            line-height: 18px;
        }
        &::after {
            content: '</h1>';
            font-family: 'La Belle Aurore';
            font-size: 18px;
            line-height: 18px;
            position: absolute;
            left: -15px;
            bottom: -20px;
            opacity: 0.6;
            color: #ffd700;
        }
    }
    p {
        font-size: 14px;
        color: white;
        font-family: sans-serif;
        font-weight: 300;
        min-width: fit-content;
        animation: pulse 0.8s;

        &:nth-of-type(1) {
            animation-delay: 1.1s;
        }

        &:nth-of-type(2) {
            animation-delay: 1.2s;
        }

        &:nth-of-type(3) {
            animation-delay: 1.3s;
        }
    }
    .text-zone {
        margin: 100px 7.5%;
        max-width: 35%;
        //font-size: 10px;
    }
    .text-animate-hover {
        &:hover {
            color: #ffd700;
        }
    }
}
.about-page {
    overflow-y: auto;
    .text-zone {
        background-color: #022c43;
    }
}

@media screen and (max-width: 1200px) {
    .about-page,
    .contact-page,
    .projects-page {
        .text-zone {
            margin: 50px 7.5% 50px 7.5%;

            h1 {
                font-size: 38px;
            }
            p {
                font-size: 14px;
            }
        }
    }

    
}

@media screen and (max-width: 850px) {
    .home-page{
        .text-zone {
            z-index: 3;
            max-width: 100%;
            margin: 50px 7.5% 50px 7.5%;

            h1 {
                font-size: 30px;
            }
            h2 {
                font-size: 11px;
            }
        }
    }
}

@media screen and (max-width: 700px) {
    .contact-page {
        flex-wrap: wrap;

        .text-zone {
            max-width: 100%;
            margin: 60px 7.5% 50px 7.5%;

            h1 {
                font-size: 24px;
            }
            p {
                font-size: 13px;
            }
        }
    }
    .contact-page {
        overflow-y: auto;
    }
}
@media screen and (max-width: 900px) {
    .projects-page,
    .about-page {
        flex-wrap: wrap;

        .text-zone {
            max-width: 100%;
            margin: 60px 7.5% 50px 7.5%;

            h1 {
                font-size: 24px;
            }
            p {
                font-size: 13px;
            }
        }
        // .projects-zone{
        //     //height:65% !important;
        // }
    }
    .time-line {
        margin: 0 7.5% 10% 7.5%;
        overflow-y: auto;
        min-height: fit-content;
    }
    
    .projects-page{
        overflow: auto;
    }
}
@media screen and (max-width: 500px) {
    .page {
        width: 100%;
        height: calc(100% - 60px);
        margin-top: 60px;
        margin-left: 0;
    }
}

